--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <title>Choco Home</title>
+    <link rel="stylesheet" type="txt/css" href="css/mystyle.css">
 </head>
 <body>
     <h1>
@@ -13,3 +14,15 @@
     </h1>
 </body>
 </html>
+
+<!--
+    git 
+    git init
+    git status
+    git add file to begin tracking the file
+    git commit to "save the changes"
+    git log
+    -->
+    <!--
+        After the first commit when I make changes to it I have to 
+-->
