--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     git add file to begin tracking the file
     git commit to "save the changes"
     git log
-    -->
-    <!--
-        After the first commit when I make changes to it I have to 
+
+    After the first commit when I make changes to it I have to 
+    git config --list user.email=lelli.alexa@gmail.com = in order to connect to the web git server
+    git push -u origin master = here I connect with my credentials to the git account in the cloud
+    origin=local server (files)
+    master=online web server (files)
+
 -->
