--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
     <title>Choco Home</title>
-    <link rel="stylesheet" type="txt/css" href="css/mystyle.css">
+    <link rel="stylesheet" type="txt/css" href="css/mystyles.css">
 </head>
+
 <body>
-    <h1>
-        A site about chocolate
-    </h1>
-    <h3>We will see some of the world's chocolates!</h3>
-    <p>It arrived to Europe in 16<sup>th</sup> century</p>
-    <br>
+    <div class="jumbotron">
+        <h1>
+            A site about chocolate
+        </h1>
+        <h3>We will see some of the world's chocolates!</h3>
+    </div>
+    <ol>
+        <li>It arrived to Europe in 16<sup>th</sup> century</li>
+        <li>It was considered a luxury food</li>
+        <li>It contains caffeine</li>
+        <li><mark>Your brain needs it after work</mark></li>
+    </ol>
+    <a href="https://en.wikipedia.org/wiki/Chocolate" target="_blank">
+        <img src="images/chocolatethings.jpg" alt="Strawberry chocolates">
+    </a>
 </body>
+
 </html>
 
 <!--
