--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/mystyles.css">
     <title>Choco Home</title>
-    <link rel="stylesheet" type="txt/css" href="css/mystyles.css">
 </head>
 
 <body>
+    
     <div class="jumbotron">
-        <h1>
-            A site about chocolate
-        </h1>
+        <h1>A site about chocolate</h1>
         <h3>We will see some of the world's chocolates!</h3>
     </div>
     <ol>
